# bayes_poker

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  benchmark_extract_scatter.py  code_review_report.md  main.py  pyproject.toml  pyrightconfig.json
.context/history/: commits.jsonl  commits.md
.context/prefs/: coding-style.md  workflow.md
.github/prompts/: commit.prompt.md  python-review.prompt.md  refactor-clean.prompt.md
.sisyphus/drafts/: strategy-engine.md
crates/clickhouse_etl/: Cargo.toml  README.md
crates/clickhouse_etl/examples/: test_parse.rs
crates/clickhouse_etl/src/: derive.rs  lib.rs  loader.rs  main.rs  parser.rs  query.rs
crates/poker_stats_rs/: CLAUDE.md  Cargo.toml
crates/poker_stats_rs/examples/: aggregate_sixmax.rs
crates/poker_stats_rs/src/: action_stats.rs  builder.rs  enums.rs  hand.rs  hand_hash.rs  lib.rs  phhs_parser.rs  player_stats.rs  postflop_params.rs  preflop_params.rs  storage.rs
docs/: hero_decision_pipeline.md
docs/plans/: 2026-02-07-limp-prefix-opponent-range.md  2026-02-15-rfi-opponent-range-design.md  2026-02-15-rfi-opponent-range.md  2026-03-07-preflop-engine-refactor-design.md  2026-03-07-preflop-engine-refactor.md  2026-03-07-preflop-strategy-sqlite-design.md  2026-03-07-preflop-strategy-sqlite.md  德州扑克策略调整设计.md  (+8 more)
notebooks/: parse_single_hand.ipynb  player_stats_analysis.ipynb  population_bucket_viewer.ipynb  preflop_range_predict.ipynb
openspec/: project.md
scripts/: analyze_preflop_bucket_similarity.py  batch_parse_handhistory.py  bench_hand_history.py  benchmark_build_player_stats.py  benchmark_opponent_estimator.py  benchmark_parallel_strategies.py  benchmark_rust_vs_python.py  build_player_stats.py  export_hero_adjustment_csv.py  export_player_core_stats_csv.py  profile_estimator_init.py  rebuild_preflop_strategy_db.py  validate_utg_open_ev_adjustment.py  verify_preflop_clickhouse_buckets.py
tests/: AGENTS.md  test_analyze_preflop_bucket_similarity_cli.py  test_belief_adjustment.py  test_bloom_filter.py  test_bucket_similarity.py  test_gaussian_distribution.py  test_hist_distribution.py  test_opponent_estimator.py  test_opponent_range.py  test_opponent_range_action_queue.py  test_opponent_range_limp_fill.py  test_opponent_range_preflop_context.py  test_parse_failed_hands.py  test_parse_gg_poker.py  test_phh_serializer.py  test_phhs_roundtrip_consistency.py  test_phhs_roundtrip_large_sample.py  test_player_metrics.py  test_player_metrics_analysis_helpers.py  test_player_metrics_core_stats_csv.py  test_player_metrics_posterior.py  test_player_stats_builder.py  test_player_stats_storage.py  test_population_vb_cli.py  test_population_vb_dataset_artifact.py  test_population_vb_prior.py  test_population_vb_trainer.py  test_preflop_engine_calibrator.py  test_preflop_engine_hero_engine.py  test_preflop_engine_mapper.py  test_preflop_engine_range_engine.py  test_preflop_engine_state.py  test_preflop_engine_tendency.py  test_preflop_history_utils.py  test_preflop_parse_importer.py  test_preflop_parse_records.py  test_preflop_parse_serialization.py  test_preflop_runtime_framework.py  test_preflop_runtime_strategy.py  test_preflop_strategy.py  (+22 more)
(+186 files in other folders)
