[project]
name = "bayes-poker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "pokerkit",
    "pybloomfiltermmap3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "large_sample: 依赖本地手牌数据集的大样本回归测试（默认跳过）",
]
