[project]
name = "bayes-poker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pokerkit",
    "pybloomfiltermmap3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "vulture>=2.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "large_sample: 依赖本地手牌数据集的大样本回归测试（默认跳过）",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"] # 包含基本错误、Bug、以及自动排序导入 (Isort)