[package]
name = "clickhouse_etl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clickhouse_etl"
path = "src/main.rs"

[[bin]]
name = "export_preflop_population_dataset"
path = "src/bin/export_preflop_population_dataset.rs"

[dependencies]
clickhouse = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1"
once_cell = "1"
rayon = "1"
walkdir = "2"
sha2 = "0.10"
flate2 = "1.0"
csv = "1.3"
poker_stats_rs = { path = "../poker_stats_rs" }

[dev-dependencies]
