[package]
name = "poker_stats_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "poker_stats_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
byteorder = "1.5"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
